--- a/faq.html
+++ b/faq.html
@@ -114,7 +114,7 @@
                               </div>
                               <div id="collapse-three" class="collapse" data-parent="#accordion-tab-one" role="tabpanel" aria-labelledby="qus-C">
                                  <div class="card-body">
-                                    <i>With High ROI</i>: &nbsp;The world of Cloud technology serices  our goal is to provide experience that is tailored to your company's needs. No matter the budget, we pride ourselves on providing professional customer service. We guarantee you will be satisfied with our work.
+                                    <i>With High ROI</i>: &nbsp;The world of Cloud technology services  our goal is to provide experience that is tailored to your company's needs. No matter the budget, we pride ourselves on providing professional customer service. We guarantee you will be satisfied with our work.
 
                                  </div>
                               </div>
@@ -131,7 +131,7 @@
                                  <div class="card-body">
                                     Clouds can be public or private, though public clouds are more commonly associated with cloud computing. Public cloud platforms, such as AWS and Microsoft Azure, pool resources in data centers often distributed around the globe, and users access them via the internet. Resources are provided to customers through metered services, and the cloud vendor is responsible for varying degrees of back-end maintenance.
 
-                                    Private clouds are walled-off environments hosted in a corporate data center or a colocation facility. They lack the massive scale of public clouds. But they do have some elasticity, and a company's developers and administrators can still use self-service portals to access resources. In theory, private clouds provide greater control and security, though it's up to a company's IT team to ensure that happens.
+                                    Private clouds are walled-off environments hosted in a corporate data center or a co-location facility. They lack the massive scale of public clouds. But they do have some elasticity, and a company's developers and administrators can still use self-service portals to access resources. In theory, private clouds provide greater control and security, though it's up to a company's IT team to ensure that happens.
                                  </div>
                               </div>
                            </div>
@@ -198,7 +198,7 @@
                </div>
                <p>NGC-Sol serves the mission-critical needs of digital services managers with clients spanning mutual
                   funds,
-                  AIFs (alternative investments), pension, wealth managers and corporates around the worl. The
+                  AIFs (alternative investments), pension, wealth managers and corporates around the world. The
                   company provides SaaS based end-to-end transaction management, channel management, compliance
                   solutions, data analytics and various other digital services to asset managers across segments,
                   as well as outsourcing services for global vendors.</p>
