--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                   </div>
                   <div class="text-left">
                      <h4>Cloud Services</h4>
-                     <p class="mb-0">Cloud based servcies...</p>
+                     <p class="mb-0">Cloud based Services...</p>
                   </div>
                </div>
             </div>
@@ -206,8 +206,7 @@
                   <div class="text-sec">
                      <p class="text-color"> <span>Don't wait</span></p>
                      <h1> <span>Let's</span> Talk?</h1>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, tempor incididunt ut labore et dolore
-                        magna aliqua. </p>
+                     <p>contact us </p>
                      <div class="contact-area mt-2">
                         <div class="contact-form-box">
                            <div class="content">
@@ -278,8 +277,8 @@
             <div class="row">
                <div class="col-lg-3"></div>
                <div class="col-lg-6">
-                  <p>From focused approach in custom mobile apps development to Cloud based devops solutons or mass
-                     Digital data publication or Data Colltection to analaysis. We have soltuons for your needs..</p>
+                  <p>From focused approach in custom mobile apps development to Cloud based devops solutions or mass
+                     Digital data publication or Data Collections to analysis. We have solutions for your needs..</p>
                </div>
                <div class="col-lg-3"></div>
             </div>
@@ -288,7 +287,7 @@
          <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
                <div class="price-box">
-                  <div class="plan">Azure solutons</div>
+                  <div class="plan">Azure solutions</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
                      <img src="images/call.png" alt="call">
@@ -304,13 +303,13 @@
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                <div class="price-box">
-                  <div class="plan">AWS Solutons</div>
+                  <div class="plan">AWS Solutions</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
                      <img src="images/shield.png" alt="shield">
                   </div>
                   <ul class="services-list mt-2">
-                     <li>Fast Nitro VM's and storage serivces</li>
+                     <li>Fast Nitro VM's and storage services</li>
                      <li>Agile Stateless functions</li>
                      <li>Lift and shift Migrations</li>
                      <li>Backup and disaster recovery </li>
@@ -326,10 +325,10 @@
                      <img src="images/service-3.png" alt="service-3">
                   </div>
                   <ul class="services-list mt-2">
-                     <li>Notification servcies</li>
-                     <li>Mobile serivces and allied services</li>
+                     <li>Notification services</li>
+                     <li>Mobile Services and allied services</li>
                      <li>GCP Tensorflow services</li>
-                     <li>Gen AI and Cloud computing serivces</li>
+                     <li>Gen AI and Cloud computing services</li>
                   </ul>
                   <button class="btn mt-3">Read More</button>
                </div>
@@ -447,9 +446,9 @@
                            <h4>Jenny Jo</h4>
                            <h6>Co Founder, Variations</h6>
                            <p>We know that quality assurance is an important part of their development process. This is
-                              why, apart from manual tests, they alos perform automated ones – using custom E2E testing
+                              why, apart from manual tests, they also perform automated ones – using custom E2E testing
                               frameworks to ensure they stand up to market standards and trends. Which is a real bonus
-                              on top of their serivcess.
+                              on top of their services.
                            </p>
                            <div class="social-icons">
                               <a href="javascript:void(0)"><i class="flaticon-facebook"></i></a>
@@ -482,7 +481,7 @@
                   <h2>Experience an improved Cloud Software Solutions development</h2>
                   <p class="mb-0">Our experience in building Cloud Solutions is gained through cooperating with
                      companies that follow various business models and operating in various business domains, including
-                     FinTech, Healthcare, e-Commerce and other sectorss. We aim for a value added service solutions.</p>
+                     FinTech, Healthcare, e-Commerce and other sectors. We aim for a value added service solutions.</p>
                </div>
             </div>
          </div>
@@ -500,7 +499,7 @@
                </div>
                <p>NGC-Sol serves the mission-critical needs of digital services managers with clients spanning mutual
                   funds,
-                  AIFs (alternative investments), pension, wealth managers and corporates around the worl. The
+                  AIFs (alternative investments), pension, wealth managers and corporations around the world. The
                   company provides SaaS based end-to-end transaction management, channel management, compliance
                   solutions, data analytics and various other digital services to asset managers across segments,
                   as well as outsourcing services for global vendors.</p>
