--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -233,9 +233,9 @@
        <div class="row">
           <div class="col-md-12 col-lg-12">
              <div class="text-center">
-                <h2>Lorem Ipsum</h2>
-                <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat turpis sed leo ornare, ut vestibulum mi tempor.
-                   Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
+               <h2>Still have doubts on our term and conditions?</h2>
+               <p class="mb-0">Drop us an e-mail or give us a call with your policy queries.</p>
+               <a href="contact.html" class="btn">Drop us your requirements</a>
              </div>
           </div>            
        </div>
