--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -187,7 +187,7 @@
              </div>
              <p>NGC-Sol serves the mission-critical needs of digital services managers with clients spanning mutual
                funds,
-               AIFs (alternative investments), pension, wealth managers and corporates around the worl. The
+               AIFs (alternative investments), pension, wealth managers and corporates around the world. The
                company provides SaaS based end-to-end transaction management, channel management, compliance
                solutions, data analytics and various other digital services to asset managers across segments,
                as well as outsourcing services for global vendors.</p>
