--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -233,7 +233,7 @@
        <div class="row">
           <div class="col-md-12 col-lg-12">
              <div class="text-center">
-               <h2>Still have doubts on our term and conditions?</h2>
+               <h2>Still have doubts on our privacy policy?</h2>
                <p class="mb-0">Drop us an e-mail or give us a call with your policy queries.</p>
                <a href="contact.html" class="btn">Drop us your requirements</a>
              </div>
@@ -253,7 +253,7 @@
              </div>
              <p>NGC-Sol serves the mission-critical needs of digital services managers with clients spanning mutual
                funds,
-               AIFs (alternative investments), pension, wealth managers and corporates around the world. The
+               AIFs (alternative investments), pension, wealth managers and corporations around the world. The
                company provides SaaS based end-to-end transaction management, channel management, compliance
                solutions, data analytics and various other digital services to asset managers across segments,
                as well as outsourcing services for global vendors.</p>
