--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 right-sec">
                <div class="trust-batch"><img src="images/about-bg-circle2.png" alt="">
-                  <p>Hi <br>I Am Agent <br>Robat</p>
+                  <p>Hi <br>I am <br>Robat</p>
                </div>
 
             </div>
