--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
                         <div class="testimonial">
                            <!--Avatar-->
                            <div class="avatar mx-auto my-2">
-                              <img src="images/testimonials/testimonial-img2.png" class="rounded-circle img-fluid"
+                              <img src="images/testimonials/Testimonial_male1.jpg" class="rounded-circle img-fluid"
                                  alt="">
                            </div>
-                           <h4>Josi Welleam</h4>
-                           <h6>Founder</h6>
+                           <h4>Srini Makke</h4>
+                           <h6>Director of Fin & HR, SVM Solutions Inc.</h6>
                            <p>With development process based on agile methodologies,Scrum regular project
                               updates, live demos and the best market practices NGC-Sol made sure that we are up-to-date
                               with everything.
@@ -440,11 +440,11 @@
                         <div class="testimonial">
                            <!--Avatar-->
                            <div class="avatar mx-auto my-2">
-                              <img src="images/testimonials/testimonial-img1.png" class="rounded-circle img-fluid"
+                              <img src="images/testimonials/Testimonial_male1.jpg" class="rounded-circle img-fluid"
                                  alt="">
                            </div>
-                           <h4>Jenny Jo</h4>
-                           <h6>Co Founder, Variations</h6>
+                           <h4>Sandy G</h4>
+                           <h6>VP Operations,, SVM Solutions Inc.</h6>
                            <p>We know that quality assurance is an important part of their development process. This is
                               why, apart from manual tests, they also perform automated ones – using custom E2E testing
                               frameworks to ensure they stand up to market standards and trends. Which is a real bonus
