--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                <div class="price-box">
-                  <div class="plan">GCP Services</div>
+                  <div class="plan">GCP Solutions</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
                      <img src="images/google-cloud.png" alt="google-cloud">
