--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                   <div class="plan">Azure solutions</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
-                     <img src="images/azure.png" alt="Azure">
+                     <img src="images/azure.png" class="img-fluid" alt="Azure">
                   </div>
                   <ul class="services-list mt-2">
                      <li>Azure infrastructure</li>
@@ -306,7 +306,7 @@
                   <div class="plan">AWS Solutions</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
-                     <img src="images/aws.png" alt="AWS">
+                     <img src="images/aws.png" class="img-fluid" alt="AWS">
                   </div>
                   <ul class="services-list mt-2">
                      <li>Fast Nitro VM's and storage services</li>
@@ -322,7 +322,7 @@
                   <div class="plan">GCP Solutions</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
-                     <img src="images/google-cloud.png" alt="google-cloud">
+                     <img src="images/google-cloud.png" class="img-fluid" alt="google-cloud">
                   </div>
                   <ul class="services-list mt-2">
                      <li>Notification services</li>
