--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                      <li>Lift and shift Migration</li>
                      <li>Backup and disaster recovery </li>
                   </ul>
-                  <button class="btn mt-3">Read More</button>
+                  <button class="btn mt-3" onclick="window.location.href='https://azure.microsoft.com/en-in/products'" target="_new">Read More</button>
                </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
@@ -314,7 +314,7 @@
                      <li>Lift and shift Migrations</li>
                      <li>Backup and disaster recovery </li>
                   </ul>
-                  <button class="btn mt-3">Read More</button>
+                  <button class="btn mt-3" onclick="window.location.href='https://aws.amazon.com/products/'">Read More</button>
                </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
@@ -330,7 +330,7 @@
                      <li>GCP Tensorflow services</li>
                      <li>Gen AI and Cloud computing services</li>
                   </ul>
-                  <button class="btn mt-3">Read More</button>
+                  <button class="btn mt-3" onclick="window.location.href='https://cloud.google.com/products?hl=en'">Read More</button>
                </div>
             </div>
          </div>
