--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <p>We are well-versed in a variety of operating systems, networks, and databases. We work with just
                      about any technology that a small business would encounter. We use this expertise to help customers
                      with small to mid-sized projects. </p>
-                  <button class="btn mt-5">READ MORE</button>
+                  <button class="btn mt-5" onclick="window.location.href='services.html'">READ MORE</button>
                </div>
 
             </div>
